Fixed the z-index of the desktop image

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ body {
   position: absolute;
   top: 3.75rem;
   left: -4.8125rem;
+  z-index: -1;
 }
 
 .online-mobile {
